# gs-vine-hero

./: !todo.txt  .gitignore  CMakeLists.txt  Info.plist.in  README.md  build.sh  build_macos.sh  build_windows.bat  build_windows_cross.sh  build_windows_mingw.bat  gs_app.cpp  gs_app.h  gs_app_sdl.cpp  gs_demo.cpp  gs_demo.h  gs_error.cpp  gs_error.h  gs_file.cpp  gs_file.h  gs_fmod_sound.cpp  gs_fmod_sound.h  gs_ini_file.cpp  gs_ini_file.h  gs_keyboard.cpp  gs_keyboard.h  gs_keyboard_sdl.cpp  gs_list.h  gs_main.cpp  gs_main.h  gs_math.h  gs_mouse.cpp  gs_mouse.h  gs_mouse_sdl.cpp  gs_object.cpp  gs_object.h  gs_ogl_collide.cpp  gs_ogl_collide.h  gs_ogl_color.h  gs_ogl_display.cpp  gs_ogl_display.h  (+31 more)
.github/workflows/: release.yml
data/: background.tga  cursor.tga  font.tga  hero_01.tga  hero_02.tga  menu.tga  title.tga  vine.tga
docs/: index.html  styles.css
docs/docs/: about.html  getting-started.html  gs-app.html  gs-error.html  gs-file.html  gs-fmod-sound.html  gs-ini-file.html  gs-keyboard.html  gs-list.html  gs-main.html  gs-math.html  gs-mouse.html  gs-object.html  gs-ogl-collide.html  gs-ogl-color.html  gs-ogl-display.html  gs-ogl-font.html  gs-ogl-image.html  gs-ogl-map.html  gs-ogl-menu.html  gs-ogl-particle.html  gs-ogl-sprite-ex.html  gs-ogl-sprite.html  gs-ogl-texture.html  gs-platform.html  gs-resource.html  gs-sdl-controller.html  gs-sdl-mixer-sound.html  gs-timer.html
docs/js/: docs.js
packaging/linux/: gs-vine-hero.desktop
templates/: hiscores.ini  settings.ini
